# memory-plugin

./: .gitignore  .mcp.json  Makefile  README.md  brain-storm.md  claude_behaviour.md  flow.md  plan-2.md  plan-3.md  plan.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.codex/: hooks.json
.codex-plugin/: plugin.json
docs/: claude-plugin.md  codex-plugin.md
hooks/: claude-hooks.json  codex-hooks.json
install-commands/: setup-claude-plugin.sh  setup-codex-plugin.sh  uninstall-claude-plugin.sh  uninstall-codex-plugin.sh
install-commands/scripts/: check-memory-status.sh  download-embedding-model.sh  memory-mcp-server.sh  register-claude-plugin.sh  register-codex-plugin.sh
skills/memory-mcp/: SKILL.md
src/memory_mcp/: __init__.py  catalog.py  cli.py  mcp_server.py  models.py  operator.py  service.py  store.py
src/memory_mcp/adapters/: __init__.py  base.py  claude.py  codex.py  generic.py
tests/: conftest.py  test_adapters.py  test_candidate_merge.py  test_catalog.py  test_checkpoints.py  test_claude_plugin.py  test_cli.py  test_content.py  test_daemon.py  test_delete_memory.py  test_event_cdc_read.py  test_events.py  test_extraction_worker.py  test_mcp_server.py  test_merge_proposal.py  test_milestone_6_evals.py  test_operator_workflow.py  test_pipeline_workers.py  test_project_scope.py  test_projects.py  test_redaction.py  test_review_inbox.py  test_review_merge.py  test_review_server.py  test_review_service.py  test_service.py  test_session_and_candidates.py  test_session_rebuild.py  test_session_worker_cdc.py  test_store.py
(+41 files in other folders)
