[project]
name = "memory-mcp"
version = "0.1.0"
description = "Local memory store prototype for Memory MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lancedb>=0.18.0",
  "langchain-huggingface>=0.1.2",
  "mcp>=1.13.0",
  "pydantic>=2.8.0",
  "sentence-transformers>=3.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
memory-mcp = "memory_mcp.cli:app"
memory-mcp-server = "memory_mcp.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
