[project]
name = "memory-mcp"
version = "0.1.0"
description = "Local memory store prototype for Memory MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lancedb>=0.18.0",
  "langchain-huggingface>=0.1.2",
  "mcp>=1.13.0",
  "pydantic>=2.8.0",
  "sentence-transformers>=3.0.0",
  "starlette>=1.3.0",
  "typer>=0.12.0",
  "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
memory-mcp = "memory_mcp.cli:app"
memory-mcp-daemon = "memory_mcp.daemon.cli:app"
memory-mcp-event = "memory_mcp.hooks.cli:app"
memory-mcp-review = "memory_mcp.review.cli:app"
memory-mcp-server = "memory_mcp.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
